web/linkage/config/openshift/exampleconfig/web/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: datalinkingwebose21v2
  namespace: linking-project-dev-2-1-0
  selfLink: /oapi/v1/namespaces/linking-project-dev-2-1-0/routes/datalinkingwebose21v2
  uid: f15060b8-4fc2-11e7-a97d-4af56a6b7ca1
  resourceVersion: '236209'
  creationTimestamp: '2017-06-12T23:00:34Z'
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: datalinkingwebose21v2-linking-project-dev-2-1-0.10.0.75.2.xip.io
  to:
    kind: Service
    name: datalinkingwebose21v2
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
status:
  ingress:
    - host: datalinkingwebose21v2-linking-project-dev-2-1-0.10.0.75.2.xip.io
      routerName: router
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2017-06-12T23:00:34Z'
      wildcardPolicy: None
